# OpenBuddy

./: .gitignore  .gitmodules  LICENSE  README.md  README.zh-CN.md  TODO.md  WORKBUDDY_UI_REFERENCE.md  dev.bat  index.html  package.json  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: UI-COMPARISON-REPORT.md  WINDOWS_BUILD_NOTES.md
docs/superpowers/plans/: 2026-07-19-workbuddy-shell.md
docs/superpowers/specs/: 2026-07-18-workbuddy-shell-design.md  2026-07-20-composer-alignment-design.md
patches/grok-build/: 01-windows-protoc.patch  02-sweep-try-borrow.patch
scripts/: _enum-windows.ps1  _get-rect.ps1  _record-openbuddy.bat  build.ps1  build.sh  convert-icons.mjs  git-push.cmd  git-push.sh  setup.ps1  setup.sh
src/: App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents_store.rs  automations.rs  bridge.rs  commands.rs  experts.rs  ext.rs  grok.rs  grok_admin.rs  lib.rs  main.rs  mcp.rs  meta.rs  notifications.rs  permission_config.rs  providers.rs  sessions.rs  shell_fs.rs  skills.rs
src-tauri/tests/: model_config_test.rs
src/components/: AboutDialog.tsx  AssistantsPanel.tsx  AutomationPanel.tsx  ChatView.tsx  Composer.tsx  ContextUsagePill.tsx  DiscoverPanel.tsx  ExpertsPanel.tsx  FolderTrustDialog.tsx  HomePage.tsx  InputAddMenu.tsx  InspirationPanel.tsx  LoadingRow.tsx  LocalAssistantView.tsx  Markdown.tsx  MarketplacePanel.tsx  MessageItem.tsx  ModelSelector.tsx  MyFilesPanel.tsx  PermissionDialog.tsx  PermissionPicker.tsx  PlaceholderPage.tsx  PlanPanel.tsx  PluginsPanel.tsx  ProjectDetailView.tsx  ProjectsPanel.tsx  QuestionInlineCard.tsx  ResourcesPanel.tsx  RewindBar.tsx  SearchOverlay.tsx  SecondarySidebar.tsx  SettingsPanel.tsx  SettingsSections.tsx  Sidebar.tsx  SlashCommands.tsx  TasksPanel.tsx  ThemeProvider.tsx  TitleBar.tsx  Toast.tsx  ToolCallCard.tsx  (+8 more)
src/components/__tests__/: AutomationPanel.test.tsx  Composer.test.tsx  HomePage.test.tsx  PlaceholderPage.test.tsx  RewindBar.test.tsx  Sidebar.test.tsx  TitleBar.test.tsx  Toast.test.tsx  ToolCallCard.test.tsx  automation-schedule.test.ts  schedule-utils-extra.test.ts  smoke.test.tsx
src/components/automation/: AutomationEditPage.tsx  AutomationPermissionConfirmDialog.tsx  AutomationPermissionPicker.tsx  AutomationTemplateGrid.tsx  ConnectorSelector.tsx  controls.tsx  schedule-utils.ts  template-config.ts  usePermissionConfirm.ts
src/components/experts-panel/: MarketHeader.tsx  index.tsx
src/components/experts-panel/connectors/: ConnectorsTab.tsx  McpConfigEditor.tsx  McpModal.tsx
src/components/experts-panel/data/: connectors-catalog.ts  featured-scenes.ts  skills-catalog.ts
src/components/experts-panel/experts/: ExpertCard.tsx  ExpertDetailModal.tsx  ExpertsTab.tsx  FeaturedScenes.tsx  MyExpertsEmpty.tsx
src/components/experts-panel/shared/: LetterAvatar.tsx  ThumbImg.tsx  ui.tsx
src/components/experts-panel/skills/: ImportSkillModal.tsx  SkillCard.tsx  SkillsTab.tsx
src/components/home/: HomeComposer.tsx  HomeHeader.tsx  HomePage.tsx  PracticeCases.tsx  SceneTabs.tsx
src/components/markdown/: CodeBlockActions.tsx  Markdown.tsx  MarkdownInlineCode.tsx  MarkdownPre.tsx  MarkdownPreMermaid.tsx  index.ts  preprocess.ts  types.ts
src/components/markdown/plugins/: rehype-code-block.ts  rehype-fix-autolink-boundary.ts  rehype-inline-code.ts  remark-code-language.ts  remark-linkify-it.ts
src/components/markdown/utils/: collect-text.ts  language-util.ts  (+1 more)
src/components/sidebar/: AutomationPanel.tsx  ColleaguesPanel.tsx  ConversationList.tsx  PinnedSection.tsx  SkillRecommendBar.tsx  WorkspaceGroup.tsx
src/lib/: app-version.ts  export-markdown.ts  file-utils.ts  grok-client.ts  loading-tips.ts  markdown-host.ts  platform.ts  session-artifacts.ts  types.ts
src/lib/__tests__/: file-utils.test.ts  platform.test.ts  session-artifacts.test.ts
src/stores/: context-usage-store.ts  pending-expert-store.ts  permission-store.ts  projects-store.ts  question-store.ts  session-store.ts  sessions-store.ts
src/stores/__tests__/: permission-store.test.ts  question-store.test.ts  session-store.test.ts  sessions-store.test.ts
src/styles/: app.css  automation-wb.css  composer-wb-align.css  global.css  tokens.css
src/types/: assets.d.ts
(+206 files in other folders)
