[package]
name = "openbuddy"
version = "0.1.0"
description = "OpenBuddy — a WorkBuddy-style desktop shell for the grok agent"
authors = ["OpenBuddy"]
edition = "2021"
rust-version = "1.92.0"

# The Tauri library expects a lib target (for mobile, and so the binary can
# stay thin). We follow the standard Tauri 2 layout: `lib.rs` with a `run()`,
# and `main.rs` that calls it.
[lib]
name = "openbuddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
uuid = { version = "1", features = ["v7"] }

# grok in-process integration. These are path dependencies into the grok
# workspace; Cargo resolves their `.workspace = true` fields against
# grok-build's root Cargo.toml automatically. We do NOT join the grok
# workspace (see the explicit [workspace] table below).
xai-acp-lib = { path = "E:/Grok/grok-build/crates/codegen/xai-acp-lib" }
xai-grok-shell = { path = "E:/Grok/grok-build/crates/codegen/xai-grok-shell" }
agent-client-protocol = { version = "0.10.4", features = ["unstable"] }
dirs = "6"
toml = "0.8"
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Dev profile - enable debug info and use safer optimization
[profile.dev]
debug = true
opt-level = 0
incremental = true

[profile.release]
incremental = true
codegen-units = 16

# Declare an explicit, self-contained workspace so Cargo does NOT pull this
# crate into grok-build's workspace (which would inherit its profile/lint
# settings and the 80 workspace members). The grok path deps above still
# resolve their own `.workspace = true` fields against grok-build's root.
[workspace]
members = ["."]
